# ParserDBPR

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  cli.py  dbpr_parser.py  main.py  text_export.py
app/static/: app.js  gpt-action-openapi.yaml  index.html  style.css
tests/: test_dbpr_gear_tool.py
